--- a/面经/算法编程.md
+++ b/面经/算法编程.md
@@ -8,3 +8,57 @@
 7. 给定m个可以重复的字符 [a, b, c, c]，以及一个长度为n的字符串tbcacbdata，
 问能否在这个字符串中找到一个长度为m的连续子串，使得这个子串刚好由上面m个字符组成，顺序无所谓，
 返回任意满足条件的一个子串的起始位置，未找到返回-1。比如上面这个例子，3。
+
+- 二级指针作为函数参数的作用:在函数外部定义一个指针p，在函数内给指针赋值，函数结束后对指针p生效，那么我们就需要二级指针。也是就在函数内改变指针类型的变量，无法直接赋值
+- 1、StringBuffer和StringBuilder的区别
+2、hashmap和hashtable的区别
+3、讲一下hashmap
+4、红黑树
+5、红黑树时间复杂度
+6、Java中还有哪些集合用到了红黑树
+7、Java中的事务
+8、http和https默认端口
+9、tcp的头结构
+10、tcp三次握手
+11、为什么是三次而不是四次
+12、tcp四次挥手为什么是四次而不是三次
+13、滑动窗口哪些地方用到
+14、翻墙中的墙的实现原理
+15、大小端
+16、用户增长
+17、快排以及优化
+18、说一下你最近学的新技术
+分布式锁原理，写失败会怎样？
+redis中自己使用的场景，为什么这样用？
+惊群和雪崩效应说一下？
+redis源码看过没？它的性能瓶颈是什么？
+消息中间件开源了解过没？(这个没深入问我，说了熟悉kafka，amq)
+说说tcp如何保证消息有序吧。
+你比较熟悉虚拟机是吧，jvm运行机制？
+jvm怎么进行类型安全检查？
+中间还问了一个jvm编译方面问题？没回答出来
+设计模式了解哪些？
+说说动态代理模式和静态代理模式区别，动态代理底层实现原理？
+反射了解吗？作用说一下？
+文件描述符作用？
+进程间通信方式？
+linux系统怎么查看网络连接？都有哪些状态？你刚才说的状态怎么发生的？
+tcp为什么要进行四次挥手？
+A.....Z所有字母组合方式，不允许有重复的，用最优的方法实现！(说了位运算的方法)。
+写一个方法输入一个整数，输出这个整数里面最大的质数，再次强调了方法最优！
+服务器用的什么？我在网络上点击一个链接说一下全过程
+到tomcat后，tomcat做了什么呢？底层如何处理整个请求的？详细说一下？就这个问题我讲解了很久，面试官根据我的回答也问了很多其他知识点，线程池，nio，socket，servlet等。。
+http常见状态吗300 302 301 304？http缓存说一下？
+tacerroute原理？
+linux系统熟悉吗？
+怎么查看占用某个端口的进程？
+怎么查看网络连接?
+cpu100如何定位？
+us解释一下？什么时候是不正常？
+closed-waited timewait状态是什么时候出现的？
+数据库存储引擎了解吗？
+说一下innodb和myaisam区别？
+底层索引怎么实现的？
+然后问了一个黑名单功能算法实现。
+
+
